upgrade to new version of captain

--- a/captain.cfg
+++ b/captain.cfg
@@ -1,5 +1,7 @@
 [helm]
 local_charts_dir = ../helm-charts
+releases_dir = releases
 
 [kubernetes]
 context = gke_techstories-155021_europe-west1-b_cluster-bke
+manifests_dir = manifests
